--- a/resources/main.storyboard
+++ b/resources/main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,9 +14,10 @@
         <scene sceneID="vqV-5I-fcj">
             <objects>
                 <navigationController id="t0C-GU-Rbu" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PCA-gN-S6n">
+                    <navigationBar key="navigationBar" alpha="0.94999999999999996" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="PCA-gN-S6n">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" cocoaTouchSystemColor="lightTextColor"/>
                     </navigationBar>
                     <connections>
                         <segue destination="7qc-MC-maJ" kind="relationship" relationship="rootViewController" id="zdR-VY-GvJ"/>
@@ -81,43 +83,64 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="Iv0-jE-3ou">
-                                <rect key="frame" x="10" y="10" width="375" height="647"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Iv0-jE-3ou">
+                                <rect key="frame" x="2" y="0.0" width="371" height="667"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="titleLabel" text="Title Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3vH-v3-1wh" userLabel="Title">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="262.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="DPw-Mn-Gtu">
-                                        <rect key="frame" x="0.0" y="262.5" width="375" height="384.5"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zbq-sH-jpl">
+                                        <rect key="frame" x="0.0" y="0.0" width="371" height="633"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="titleLabel" text="Title Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3vH-v3-1wh" userLabel="Title">
+                                                <rect key="frame" x="10" y="10" width="351" height="24"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <color key="textColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="3vH-v3-1wh" secondAttribute="trailing" constant="10" id="3ld-qO-lag"/>
+                                            <constraint firstItem="3vH-v3-1wh" firstAttribute="leading" secondItem="zbq-sH-jpl" secondAttribute="leading" constant="10" id="U1K-bb-vyr"/>
+                                            <constraint firstAttribute="bottom" secondItem="3vH-v3-1wh" secondAttribute="bottom" constant="10" id="fHh-xt-IWa"/>
+                                            <constraint firstItem="3vH-v3-1wh" firstAttribute="top" secondItem="zbq-sH-jpl" secondAttribute="top" constant="10" id="xMY-79-4Vf"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="DPw-Mn-Gtu">
+                                        <rect key="frame" x="0.0" y="641" width="371" height="26"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nkz-I6-RXV">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="384.5"/>
-                                                <state key="normal" title="Next"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="180.5" height="26"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <state key="normal" title="Next">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="next_item:" destination="Nn9-gQ-5IU" eventType="touchUpInside" id="UCK-N2-Nvz"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9De-fC-Ue9">
-                                                <rect key="frame" x="177.5" y="0.0" width="187.5" height="384.5"/>
-                                                <state key="normal" title="Like"/>
+                                                <rect key="frame" x="190.5" y="0.0" width="180.5" height="26"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <state key="normal" title="Like">
+                                                    <color key="titleColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="favorite_item:" destination="Nn9-gQ-5IU" eventType="touchUpInside" id="T1b-VV-ojW"/>
                                                 </connections>
                                             </button>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="120" id="9ob-Cr-N38"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="Iv0-jE-3ou" secondAttribute="bottom" constant="10" id="VeT-8j-Jcp"/>
-                            <constraint firstItem="Iv0-jE-3ou" firstAttribute="top" secondItem="6Gq-5w-eSh" secondAttribute="top" constant="10" id="VeW-bx-g7g"/>
-                            <constraint firstAttribute="trailing" secondItem="Iv0-jE-3ou" secondAttribute="trailing" constant="10" id="dqO-Gl-oNW"/>
-                            <constraint firstItem="Iv0-jE-3ou" firstAttribute="leading" secondItem="6Gq-5w-eSh" secondAttribute="leading" constant="10" id="xhY-1U-pZC"/>
+                            <constraint firstAttribute="bottom" secondItem="Iv0-jE-3ou" secondAttribute="bottom" id="VeT-8j-Jcp"/>
+                            <constraint firstItem="Iv0-jE-3ou" firstAttribute="top" secondItem="6Gq-5w-eSh" secondAttribute="top" id="VeW-bx-g7g"/>
+                            <constraint firstAttribute="trailing" secondItem="Iv0-jE-3ou" secondAttribute="trailing" constant="2" id="dqO-Gl-oNW"/>
+                            <constraint firstItem="Iv0-jE-3ou" firstAttribute="leading" secondItem="6Gq-5w-eSh" secondAttribute="leading" constant="2" id="xhY-1U-pZC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fvQ-bO-yRt"/>
                     </view>
