--- a/resources/main.storyboard
+++ b/resources/main.storyboard
@@ -10,12 +10,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Reading-->
         <scene sceneID="vqV-5I-fcj">
             <objects>
-                <navigationController id="t0C-GU-Rbu" sceneMemberID="viewController">
+                <navigationController title="Reading" navigationBarHidden="YES" id="t0C-GU-Rbu" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" alpha="0.94999999999999996" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="PCA-gN-S6n">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" cocoaTouchSystemColor="lightTextColor"/>
                     </navigationBar>
@@ -60,7 +59,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="Nn9-gQ-5IU" kind="showDetail" identifier="ShowItem" action="showViewController:sender:" id="PKy-gL-tTn"/>
+                                    <segue destination="Nn9-gQ-5IU" kind="show" identifier="ShowItem" id="PKy-gL-tTn"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -84,32 +83,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Iv0-jE-3ou">
-                                <rect key="frame" x="2" y="0.0" width="371" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zbq-sH-jpl">
-                                        <rect key="frame" x="0.0" y="0.0" width="371" height="633"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="633"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="titleLabel" text="Title Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3vH-v3-1wh" userLabel="Title">
-                                                <rect key="frame" x="10" y="10" width="351" height="24"/>
+                                                <rect key="frame" x="10" y="10" width="355" height="613"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <color key="textColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
+                                                <color key="shadowColor" cocoaTouchSystemColor="lightTextColor"/>
+                                                <size key="shadowOffset" width="2" height="0.0"/>
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="3vH-v3-1wh" secondAttribute="trailing" constant="10" id="3ld-qO-lag"/>
                                             <constraint firstItem="3vH-v3-1wh" firstAttribute="leading" secondItem="zbq-sH-jpl" secondAttribute="leading" constant="10" id="U1K-bb-vyr"/>
-                                            <constraint firstAttribute="bottom" secondItem="3vH-v3-1wh" secondAttribute="bottom" constant="10" id="fHh-xt-IWa"/>
+                                            <constraint firstAttribute="bottom" secondItem="3vH-v3-1wh" secondAttribute="bottom" priority="999" constant="10" id="fHh-xt-IWa"/>
                                             <constraint firstItem="3vH-v3-1wh" firstAttribute="top" secondItem="zbq-sH-jpl" secondAttribute="top" constant="10" id="xMY-79-4Vf"/>
                                         </constraints>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="DPw-Mn-Gtu">
-                                        <rect key="frame" x="0.0" y="641" width="371" height="26"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="DPw-Mn-Gtu">
+                                        <rect key="frame" x="0.0" y="641" width="375" height="26"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nkz-I6-RXV">
-                                                <rect key="frame" x="0.0" y="0.0" width="180.5" height="26"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="177.5" height="26"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <state key="normal" title="Next">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -119,10 +120,10 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9De-fC-Ue9">
-                                                <rect key="frame" x="190.5" y="0.0" width="180.5" height="26"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <rect key="frame" x="197.5" y="0.0" width="177.5" height="26"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                 <state key="normal" title="Like">
-                                                    <color key="titleColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
                                                     <action selector="favorite_item:" destination="Nn9-gQ-5IU" eventType="touchUpInside" id="T1b-VV-ojW"/>
@@ -130,17 +131,18 @@
                                             </button>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="120" id="9ob-Cr-N38"/>
+                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="80" id="9ob-Cr-N38"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
+                        <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="Iv0-jE-3ou" secondAttribute="bottom" id="VeT-8j-Jcp"/>
                             <constraint firstItem="Iv0-jE-3ou" firstAttribute="top" secondItem="6Gq-5w-eSh" secondAttribute="top" id="VeW-bx-g7g"/>
-                            <constraint firstAttribute="trailing" secondItem="Iv0-jE-3ou" secondAttribute="trailing" constant="2" id="dqO-Gl-oNW"/>
-                            <constraint firstItem="Iv0-jE-3ou" firstAttribute="leading" secondItem="6Gq-5w-eSh" secondAttribute="leading" constant="2" id="xhY-1U-pZC"/>
+                            <constraint firstAttribute="trailing" secondItem="Iv0-jE-3ou" secondAttribute="trailing" id="dqO-Gl-oNW"/>
+                            <constraint firstItem="Iv0-jE-3ou" firstAttribute="leading" secondItem="6Gq-5w-eSh" secondAttribute="leading" id="xhY-1U-pZC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fvQ-bO-yRt"/>
                     </view>
