--- a/resources/main.storyboard
+++ b/resources/main.storyboard
@@ -85,32 +85,39 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Iv0-jE-3ou">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zbq-sH-jpl">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="778"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="FU0-7U-5nj" userLabel="Item Stack">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="724"/>
                                         <subviews>
-                                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="titleLabel" text="Title Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3vH-v3-1wh" userLabel="Title">
-                                                <rect key="frame" x="10" y="10" width="355" height="758"/>
+                                            <label opaque="NO" alpha="0.94999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="titleLabel" text="Title Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3vH-v3-1wh" userLabel="Title">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="644"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="900" constant="120" id="1GL-lz-KTi"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                                 <color key="shadowColor" cocoaTouchSystemColor="lightTextColor"/>
                                                 <size key="shadowOffset" width="2" height="0.0"/>
                                             </label>
+                                            <label opaque="NO" alpha="0.90000000000000002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No comments." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ozb-p3-3SQ">
+                                                <rect key="frame" x="0.0" y="644" width="375" height="80"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="375" id="1ZL-HF-XIj"/>
+                                                    <constraint firstAttribute="height" constant="80" id="hfb-Ap-hNp"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="3vH-v3-1wh" secondAttribute="trailing" constant="10" id="3ld-qO-lag"/>
-                                            <constraint firstItem="3vH-v3-1wh" firstAttribute="leading" secondItem="zbq-sH-jpl" secondAttribute="leading" constant="10" id="U1K-bb-vyr"/>
-                                            <constraint firstAttribute="bottom" secondItem="3vH-v3-1wh" secondAttribute="bottom" priority="999" constant="10" id="fHh-xt-IWa"/>
-                                            <constraint firstItem="3vH-v3-1wh" firstAttribute="top" secondItem="zbq-sH-jpl" secondAttribute="top" constant="10" id="xMY-79-4Vf"/>
-                                        </constraints>
-                                    </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="DPw-Mn-Gtu">
-                                        <rect key="frame" x="0.0" y="786" width="375" height="26"/>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="DPw-Mn-Gtu" userLabel="Btns Stack">
+                                        <rect key="frame" x="0.0" y="732" width="375" height="80"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nkz-I6-RXV">
-                                                <rect key="frame" x="0.0" y="0.0" width="177.66666666666666" height="26"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="177.66666666666666" height="80"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <state key="normal" title="Next">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -120,7 +127,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9De-fC-Ue9">
-                                                <rect key="frame" x="197.66666666666663" y="0.0" width="177.33333333333337" height="26"/>
+                                                <rect key="frame" x="197.66666666666663" y="0.0" width="177.33333333333337" height="80"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                 <state key="normal" title="Like">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -147,6 +154,7 @@
                         <viewLayoutGuide key="safeArea" id="fvQ-bO-yRt"/>
                     </view>
                     <connections>
+                        <outlet property="commentLabel" destination="Ozb-p3-3SQ" id="Bqi-ot-1Mf"/>
                         <outlet property="titleLabel" destination="3vH-v3-1wh" id="3tM-il-Yjo"/>
                     </connections>
                 </viewController>
